Changes from 3.0.0 to 3.0.1
---------------------------

** Bug

   [FELIX-3005] - Compatibility API does not add components in DependencyManager
   [FELIX-3475] - ServiceDependencyImpl does not override toString

** Improvement

Release 3.0.0
-------------

Initial version.