@@ -5,6 +5,7 @@ Changes from 3.0.0 to 3.0.1
 
    [FELIX-3005] - Compatibility API does not add components in DependencyManager
    [FELIX-3475] - ServiceDependencyImpl does not override toString
+   [FELIX-3617] - Missing toString methods in DependencyManager compat bundle
 
 ** Improvement
 
